<resources>
    <string name="app_name">Food Service</string>
    <string name="Fritanga_Name">Food Service</string>
    <string name="hint_username">Nombre de usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="text_button_login">Iniciar Sesión</string>
    <string name="dont_have_account">¿Nuevo Usuario?</string>
    <string name="create_here">Registrate</string>
    <string name="hint_email">Correo</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_user">Usuario</string>
    <string name="hint_confirm_password">Confirmar Contraseña</string>
    <string name="transitionname_picture">nombredelaimagentransicion</string>
    <string name="text_button_createaccount">Únete</string>
    <string name="toolbar_tittle_createaccount">Crear Cuenta</string>
    <string name="men_principal">Menú Principal</string>
    <string name="user">Usuario</string>
    <string name="direction">Ciudad Sandino, Managua</string>
    <string name="update">Actualizar</string>
    <string name="date">15 de octubre del 2015</string>
    <string name="PayedStatus">Pagado</string>
    <string name="order">Arroz y frijoles</string>
    <string name="price">C$ 05.00</string>
    <string name="view_detail">Ver Detalles</string>
    <string name="add">Agregar</string>
    <string name="ordernumber">Orden numero: #12</string>
    <string name="order_item_list">Pedidos</string>
    <string name="order_items">Items</string>
    <string name="two">2</string>
    <string name="subtotal">Subtotal:</string>
    <string name="amount">$ 120.0</string>
    <string name="order_iva">IVA</string>
    <string name="iva_amount">$0.00</string>
    <string name="total">Total</string>
    <string name="items">&#160;- 0 Items</string>
    <string name="price_total">C$ 0</string>
    <string name="procede">REGISTRAR PEDIDO</string>
    <string name="Delete">ELIMINAR DEL MENU</string>
    <string name="no_items">NO ITEMS</string>
    <string name="todo">TODO</string>
    <string name="cancele">CANCELAR</string>
    <string name="titulo">Sample Title</string>
    <string name="cantidad">CANTIDAD</string>
    <string name="quantity">1</string>
    <string name="save">GUARDAR</string>
    <string name="reporte_general">Reporte General</string>
    <string name="pedidos_semanales">Pedidos Semanales</string>
    <string name="pedidos_diarios">Pedidos Diarios</string>
    <string name="numero_de_deudores">Numero de deudores</string>
    <string name="comidad">Comidad</string>
    <string name="ejemplo_nombbre_de_item">Ejemplo Nombre de Item</string>
    <string name="c_50">C$ 50</string>
    <string name="_0_x">0 X</string>
    <string name="example_event">Example event</string>
    <string name="guardar">GUARDAR</string>
    <string name="nombre_del_platilo">Nombre</string>
    <string name="descripci_n">Descripción</string>
    <string name="costo">Costo</string>
    <string name="deleteAll">BORRAR TODO EL MENU</string>
    <string name="tb_editmenu">EDITAR MENU</string>
    <string name="tb_general">GENERAL</string>
    <string name="tb_menu">MENU</string>
    <string name="tb_reporte">REPORTE</string>
    <string name="tb_reportdetails">REPORTE DETALLADO</string>
    <string name="welcome">Bienvenido de Regreso,</string>
    <string name="loggo">Registrate para continuar</string>

    <string name="lbl_set_profile_photo">Selecionar imagen</string>
    <string name="lbl_take_camera_picture">Tomar una foto</string>
    <string name="lbl_choose_from_gallery">Eligir de la galeria</string>
    <string name="toast_image_intent_null">¡No se pudo cargar la imagen!</string>

    <string name="dialog_permission_title">Permisos Requeridos</string>
    <string name="dialog_permission_message">Esta app necesita de algunos permisos para usar esta caracteristica. Da permiso en las configuraciones.</string>
    <string name="go_to_settings">Cambiado pantalla a Configuraciones</string>
    <string name="products">Productos</string>
    <string name="cliente">Comprador</string>
    <string name="choose_client">Seleccioné un Cliente</string>
    <string name="payment">Pago</string>
    <string name="confirmate">Confirmar Orden</string>
    <string name="Phone">Telefono</string>
    <string name="Adress">Dirección</string>
    <string name="fechaPago">Fecha de Pago</string>
    <string name="tipo_de_pago">Tipo de Pago</string>
    <string name="ccv">CCV</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="food">Comida</string>
    <string name="drinks">Bebida</string>
    <string name="Extra">Extra</string>
    <string name="search">Busqueda</string>
    <string name="client">Cliente</string>
    <string name="Apellido">Apellido</string>
    <string name="Telefono">Telefono</string>
    <string name="addUser">Agregar Usuario</string>
    <string name="mas">Ver Más</string>
    <string name="precio">Precio</string>
    <string name="existencias">Existencias</string>
    <string name="clasificación">Clasificación</string>
    <string name="pedido">Pedido</string>
    <string name="cliente_">Cliente</string>
    <string name="cr_dito">Crédito</string>
    <string name="contado">Contado</string>
    <string name="CONFIRMAR">CONFIRMAR</string>
    <string name="confirme">Confirmar Pedido</string>
    <string name="Fiado">Fiado</string>
    <string name="dummystring">Dummy user, Dummy user,  (505) 8569–3465</string>
    <string name="dia_pago">Fecha de Pago</string>
    <string name="payhoy">Pagar Ahora</string>
    <string name="producto">Producto</string>
    <string name="reporte">Reporte</string>
    <string name="edition">Editar BD</string>
    <string name="administraci_n">Administración</string>
    <string name="reporte_actualizado">Reporte Actualizado</string>
    <string name="_28_ago_19">28 Ago 19</string>
    <string name="_245">245</string>
    <string name="_23">23</string>
    <string name="_52791">52791</string>
    <string name="_92776">92776</string>
    <string name="pedidos">Pedidos</string>
    <string name="succesfull">Orden Exitosamente Registrada</string>
    <string name="check_orden">Para revisar la orden, dirigite a Reporte</string>
    <string name="date_charge">Fecha en Cargada 14/06/2018</string>
    <string name="goMenu">Ir al Menú Principal</string>
    <string name="id_orden">ID de la Orden : 823748734273</string>
    <string name="fakename">Juana de Arco</string>
    <string name="deliv">Dia de Entrega</string>
    <string name="pricendate">Precio y pago</string>
    <string name="people_name">People Name</string>
    <string name="_9333_2333">9333–2333</string>
    <string name="edition_cliente">EDITAR CLIENTE</string>
    <string name="balance">Total</string>
    <string name="_1_500_20">monto</string>
    <string name="mon_15_feb_balance_36_131_45">mon 15 fec</string>
    <string name="enter_information">Verifique los Siguientes Detalles</string>
    <string name="fechaEntrega">Fecha de Entrega</string>
    <string name="_15">15</string>
    <string name="made">Hecho con amor</string>
    <string name="pay_day">Dia de Pago</string>
    <string name="all_report">Todos Los Reportes</string>
    <string name="select">Ver Reporte por:</string>
    <string name="fecha">Fecha</string>
    <string name="registro">Registro</string>
    <string name="deuda_actual">Deuda Actual</string>
    <string name="peek">C$ 2.561</string>
    <string name="order_number_98287324">Order Number : 98287324</string>
    <string name="forgot">¿Olvido la Contraseña?</string>
    <string name="conf">Configuración</string>
    <string name="info_account">Información de la cuenta</string>
    <string name="infoUser">Información del Usuario</string>
    <string name="hint_age">Edad</string>
    <string name="hint_gender">Genero</string>
    <string name="profile">Perfil</string>
    <string name="start_day">Fecha de Inicio</string>
    <string name="end_day">Fecha Final</string>
    <string name="Filtrar">Filtrar</string>
    <string name="SelectDate">Selecionar Fecha</string>
    <string name="tb_ReporteCredit">Reporte de Credito</string>
    <string name="numero_de_creditos">Numero de creditos</string>
    <string name="pedidos_semana">Pedido esta Semana</string>
    <string name="pedidos_diario">Pedido en el Dia de Hoy</string>
    <string name="debito">Débito</string>
    <string name="tbdebi">Reporte de Pedidos Pagados</string>
    <string name="desarrollador">Desarrolador 1:</string>
    <string name="Desarrolado2">Desarrolador 2:</string>
    <string name="name1">Jesús Enmanuel Hernández González</string>
    <string name="name2">Kennet Manuel Riverda Soza</string>
    <string name="desarrolladores">Desarrolladores</string>
    <string name="tb_credit">Información</string>

    <string-array name="Tipos">
        <item>Comida</item>
        <item>Bebida</item>
        <item>Extra</item>
    </string-array>

    <string-array name="FormaPago">
        <item>Debito</item>
        <item>Credito</item>
    </string-array>

</resources>
