<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:paddingLeft="16sp"
    android:paddingRight="16sp"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0.0dip"
        android:layout_height="wrap_content"
        android:layout_weight="3.0">
        <TextView android:textSize="12sp"
            android:id="@+id/checkout_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12sp"
            android:text="@string/order_item_list" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0.0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1.0">

        <TextView
            android:id="@+id/checkout_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12sp"
            android:text="@string/two"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0.0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1.0">
        <TextView
            android:textSize="12sp"
            android:id="@+id/checkout_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12sp"
            android:text="@string/price"/>
    </LinearLayout>
</LinearLayout>