<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="325dp"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="@dimen/spacing_large">

        <View
            android:layout_width="0.0dip"
            android:layout_height="@dimen/spacing_middle" />

        <ImageView
            android:layout_width="76dp"
            android:layout_height="80.0dip"
            android:src="@drawable/ic_logo_small"
            android:tint="@color/blue_grey_800"
            android:contentDescription="@string/todo" />

        <View
            android:layout_width="0.0dip"
            android:layout_height="@dimen/spacing_large" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:text="@string/welcome"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@color/blue_grey_800"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:text="@string/loggo"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
            android:textColor="@color/blue_grey_300"
            android:textStyle="bold" />

        <View
            android:layout_width="0.0dip"
            android:layout_height="@dimen/spacing_middle" />

        <View
            android:layout_width="0.0dip"
            android:layout_height="0.0dip"
            android:layout_weight="1.0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_email"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="@color/blue_grey_800"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:theme="@style/EditText.Grey"
                android:id="@+id/txtEdit_User"
                android:textColor="@color/blue_grey_300"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-4.0dip"
                android:layout_marginRight="-4.0dip"
                android:maxLines="1"
                android:singleLine="true"
                android:maxLength="25"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="0.0dip"
            android:layout_height="@dimen/spacing_mlarge" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_password"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="@color/blue_grey_800"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:theme="@style/EditText.Grey"
                android:id="@+id/txtEdit_Pass"
                android:textColor="@color/blue_grey_300"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-4.0dip"
                android:layout_marginLeft="-4.0dip"
                android:layout_marginRight="-4.0dip"
                android:maxLines="1"
                android:singleLine="true"
                android:maxLength="10"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="0.0dip"
            android:layout_height="@dimen/spacing_middle" />

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/spacing_medium"
            android:clickable="true"
            android:text="@string/forgot"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
            android:textColor="@color/blue_grey_400"
            android:textStyle="bold"
            android:focusable="true" />

        <View
            android:layout_width="0.0dip"
            android:layout_height="@dimen/spacing_large" />

        <Button
            android:onClick="goHome"
            android:layout_width="fill_parent"
            android:layout_height="55.0dip"
            android:layout_marginLeft="-4.0dip"
            android:layout_marginRight="-4.0dip"
            android:background="@drawable/btn_purple_a400"
            android:text="@string/text_button_login"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <View
            android:layout_width="0.0dip"
            android:layout_height="@dimen/spacing_medium" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dont_have_account"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                android:textColor="@color/blue_grey_300" />

            <TextView
                android:id="@+id/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/create_here"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                android:textColor="@color/purple_A400"
                android:textStyle="bold"
                android:focusable="true" />
        </LinearLayout>

        <View
            android:layout_width="0.0dip"
            android:layout_height="@dimen/spacing_xlarge" />
    </LinearLayout>
</RelativeLayout>