<?xml version="1.0" encoding="utf-8" ?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorWhite"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <FrameLayout
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_gravity="center"
                android:layout_width="85.0dip"
                android:layout_height="82.0dip"
                android:layout_marginTop="80.0dip"
                android:src="@drawable/ic_check"
                tools:ignore="ContentDescription" />
            <ImageView
                android:background="@drawable/bluebgdots"
                android:layout_width="fill_parent"
                android:layout_height="257.0dip"
                tools:ignore="ContentDescription" />
        </FrameLayout>
        <TextView
            android:textColor="@color/colorBlack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="56.0dip"
            android:textSize="16.699982sp"
            android:gravity="center"
            android:text="@string/succesfull"/>

        <TextView
            android:text="@string/check_orden"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="11.299988sp"
            android:textColor="#ff8c9095"
            android:layout_marginTop="8.0dip"
            android:gravity="center"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/idOrden"
            android:text="@string/id_orden"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="11.299988sp"
            android:textColor="#ff8c9095"
            android:layout_marginTop="8.0dip"
            android:gravity="center"
            android:maxLength="30"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/idDate"
            android:text="@string/date_charge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12.299988sp"
            android:textColor="#ffac8401"
            android:layout_marginTop="29.0dip"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <com.balysv.materialripple.MaterialRippleLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_horizontal_login"
            style="@style/RippleStyleWhite">
            <Button
                android:textAllCaps="false"
                android:background="@drawable/view_order_rect"
                android:textColor="@android:color/white"
                android:textSize="13.299988sp"
                android:onClick="goMenu"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:minHeight="?actionBarSize"
                android:text="@string/goMenu"
                style="@style/Base.Widget.AppCompat.Button.Borderless" />
        </com.balysv.materialripple.MaterialRippleLayout>
    </LinearLayout>
</RelativeLayout>