<?xml version="1.0" encoding="utf-8" ?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/direction_card_view"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="1.0dip"
    card_view:cardElevation="3sp"
    card_view:cardUseCompatPadding="true">
    <LinearLayout
        android:orientation="vertical"
        android:padding="16sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="14sp"
                android:id="@+id/order_name"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:layout_gravity="start"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:text="@string/fakename"
                android:maxLines="1"
                android:layout_weight="1.0"/>
            <TextView
                android:textSize="13sp"
                android:textColor="@color/colorBorder"
                android:gravity="end"
                android:layout_gravity="end"
                android:id="@+id/pay_status"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:text="@string/PayedStatus"
                android:layout_weight="1.0"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="2.0">
                <TextView
                    android:textSize="12sp"
                    android:textColor="@color/colorBlack"
                    android:id="@+id/order_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/date"/>
                <TextView
                    android:textSize="13sp"
                    android:textColor="@color/colorAccent"
                    android:id="@+id/order_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8sp"
                    android:maxLines="1"
                    android:text="@string/price"/>
            </LinearLayout>
            <LinearLayout
                android:gravity="end"
                android:orientation="vertical"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.0">
                <com.balysv.materialripple.MaterialRippleLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6sp"
                    style="@style/RippleStyleBlack">

                    <TextView
                        android:textColor="@color/colorWhite"
                        android:gravity="end"
                        android:id="@+id/order_tracking"
                        android:background="@color/colorPrimary"
                        android:padding="8sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/view_detail"/>
                </com.balysv.materialripple.MaterialRippleLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>